# VideoSlideMaker

./: CMakeLists.txt  README.md  VideoSlideMaker.pro  main.cpp  videoslidemaker.cpp  videoslidemaker.h  videoslidemakermain.cpp  videoslidemakermain.h  videoslidemakeroptions.cpp  videoslidemakeroptions.h
VideoSlideMaker/: CMakeLists.txt  VideoSlideMaker.pro  main.cpp  videoslidemaker.cpp  videoslidemaker.h  videoslidemakeroptions.h  videoslidemakerwindow.h
VideoSlideMakerGui/: CMakeLists.txt  videoslidemakerpresenter.cpp  videoslidemakerpresenter.h  videoslidemakerwindow.cpp  videoslidemakerwindow.ui
